# br_chat

./: .gitignore  README.md
docker/: init.sql  (+6 more)
server/: README.md  alembic.ini  cpu.Dockerfile  gpu.Dockerfile  main.py  pyproject.toml  task.py
server/chatbot/: config.py  log.py
server/chatbot/controller/: __init__.py  auth.py  configuration.py  knowledge.py  model.py  session.py  source.py  stats.py  tool.py
server/chatbot/db/: __init__.py  connection.py
server/chatbot/dto/: __init__.py  auth.py  configuration.py  knowledge.py  message.py  session.py  stats.py  user.py
server/chatbot/knowledge/: __init__.py  collection.py  connection.py
server/chatbot/service/: auth.py  base_extension_factory.py  configuration.py  knowledge.py  stats.py
server/chatbot/task/: __init__.py  connection.py  source.py
server/chatbot/util/: aio.py  channel.py  error.py  file.py  singleton.py  string.py
server/migrations/: env.py
server/migrations/versions/: 202403091114-c2bc7954e55f-init.py  202403091134-56e7be42523f-languages.py  202403091154-02cf1afc4766-message_source.py  202403091250-4cd07fe1af9a-source_id_fk_removed.py  202403091301-a0b073206a3d-session_type.py  202403091340-ab704bdb8fc4-question_answering_history.py  202403091359-d80d51462a2d-models_and_tools.py  202403091415-0d185eb73d7a-default_models.py  202403091432-4235caa4c96c-default_tools.py  202403091452-44adb515ff9e-tool_configuration.py  202403091522-d323a2eea125-openai_model.py  202403091552-d01cbd6dfbd8-max_results_for_source_analysis.py  (+9 more)
server/scripts/: run-background.sh
server/tests/: evaluate.py
(+146 files in other folders)
