[tool.poetry]
name = "br-chatbot"
version = "0.1.0"
description = "Bank of Russia Chatbot"
authors = ["Danil Kapustin <danil.kapustin@raftds.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
pydantic = "1.10.11"
asyncpg = "^0.28.0"
alembic = "^1.13.0"
fastapi-pagination = "^0.12.6"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
websockets = "^11.0.3"
redis = "^4.6.0"
atlassian-python-api = "^3.40.0"
saq = {extras = ["web"], version = "^0.12.2"}
spacy = "^3.7.2"
spacy-fastlang = "^2.0.0"
sentence-transformers = "^2.2.2"
inscriptis = "^2.3.2"
torch = "^2.0.0"
transformers = "^4.35.2"
peft = "^0.5.0"
pdfplumber = "^0.10.2"
docx2txt = "^0.8"
openpyxl = "^3.1.2"
portalocker = "^2.8.2"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
ragas = "^0.0.22"
pandas = "^2.2.0"
jsonlines = "^4.0.0"

[tool.poetry.dev-dependencies]
pylint = "^3.0.1"

[tool.poetry.group.chroma.dependencies]
chromadb = "^0.4.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
